--- a/index.html
+++ b/index.html
@@ -212,8 +212,9 @@
           </p>
 
           <p>
-          I am passionate for technology and a strong interest in coding and software development. Alongside my academic pursuits, I love exploring new places and embracing the thrill of discovering diverse cultures and landscapes. This blend of technical curiosity and love for adventure fuels my drive to innovate and broaden my horizons both professionally and personally. I am excited about the endless possibilities in the world of software engineering and look forward to contributing to groundbreaking projects in the future.
+         Enthusiastic about technology and software development, I actively pursue opportunities to expand my knowledge and skills in the field. Alongside my academic journey, I enjoy exploring new destinations and experiencing a wide range of cultures and landscapes. This combination of technical curiosity and a love for adventure inspires me to innovate and continually broaden my horizons in both professional and personal pursuits. I am eager to embrace the many opportunities that software engineering offers and look forward to contributing to impactful and innovative projects in the future.
           </p>
+          
         </section>
 
 
@@ -929,3 +930,4 @@ Collected client requirements via 20+ workshops and feedback, and created report
 
 
 </html>
+
