--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@
 
               <span>2021-2022</span>
 
+               <p class="timeline-text">
+                12th std | Percentage: 75.8% </p>
               <p class="timeline-text">
               CBSE BORAD :PCM </p>
-              <p class="timeline-text">
-75.8%
-              </p>
+            
               
 
             </li>
@@ -930,4 +930,5 @@ Collected client requirements via 20+ workshops and feedback, and created report
 
 
 </html>
+
 
